--- a/myscript-stylesheet.html
+++ b/myscript-stylesheet.html
@@ -271,6 +271,7 @@ CSS variable | Default
             }
 
             .options-label-button {
+                color: black;
                 font-size: 16px;
                 cursor: pointer;
                 box-sizing: border-box;
