--- a/examples/index.html
+++ b/examples/index.html
@@ -166,6 +166,20 @@
             </div>
             <div class="grid-column-two">
                 <h2>V4 - iink SDK web</h2>
+                <p><strong>REST text</strong></p>
+                <div class="center">
+                    <a href="v4/iink_rest_text.html" class="btn">
+                        <svg class="icn">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
+                        </svg>
+                        View example</a>
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/v4/iink_rest_text.html"
+                       target="_blank" class="btn">
+                        <svg class="icn">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
+                        </svg>
+                        Get source code</a>
+                </div>
                 <p><strong>Import content</strong></p>
                 <div class="center">
                     <a href="v4/import_content.html" class="btn">
