--- a/examples/non-version-specific/get_languages.html
+++ b/examples/non-version-specific/get_languages.html
@@ -13,7 +13,7 @@
 
         <link rel="stylesheet" href="../examples.css">
 
-        <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+        <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
         <script type="module" src="../../myscript-languages-element.js"></script>
     </head>
 
