--- a/examples/non-version-specific/handle_errors.html
+++ b/examples/non-version-specific/handle_errors.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <!-- Those meta make the capture of handwriting inputs easier on mobile devices -->
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="HandheldFriendly" content="true"/>
+<head>
+    <!-- Those meta make the capture of handwriting inputs easier on mobile devices -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="HandheldFriendly" content="true"/>
 
-        <title>Handle error</title>
+    <title>Handle error</title>
 
-        <link rel="stylesheet" href="../examples.css">
+    <link rel="stylesheet" href="../examples.css">
 
-        <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-        <script type="module" src="@polymer/paper-toast/paper-toast.js"></script>
-        <script type="module" src="../../myscript-common-element.js"></script>
-    </head>
+    <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script type="module" src="../../node_modules/@polymer/paper-toast/paper-toast.js"></script>
+    <script type="module" src="../../myscript-common-element.js"></script>
+</head>
 
-    <body>
-        <paper-toast class="fit-top"></paper-toast>
-        <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
-        <myscript-common-element host="thisisnotanhost" applicationkey="WRONG">
-        </myscript-common-element>
-        <script type="module">
-import '@polymer/paper-toast/paper-toast.js';
-import '../../myscript-common-element.js';
-const paperToast = document.querySelector('paper-toast');
-document.querySelector('myscript-common-element').addEventListener('error', (event) => {
-    paperToast.text = `Error : ${JSON.stringify(event.detail)}`;
-    paperToast.fitIn = paperToast.show();
-});
+<body>
+<paper-toast class="fit-top"></paper-toast>
+<!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
+<myscript-common-element host="thisisnotanhost" applicationkey="WRONG">
+</myscript-common-element>
+<script>
+    const paperToast = document.querySelector('paper-toast');
+    document.querySelector('myscript-common-element').addEventListener('error', (event) => {
+        paperToast.text = `Error : ${JSON.stringify(event.detail)}`;
+        paperToast.fitIn = paperToast.show();
+    });
 </script>
-    </body>
+</body>
 
 </html>
