--- a/examples/v4/pointer_events.html
+++ b/examples/v4/pointer_events.html
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="../examples.css">
     <style>
         myscript-common-element {
-            height : 50vh;
+            height: 50vh;
         }
+
         textarea {
             width: 100vw;
             height: calc(50vh - 58px);
@@ -29,24 +30,23 @@
     </style>
 
     <!-- As web components are not fully support -->
-    <script src="@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="pepjs/dist/pep.min.js"></script>
+    <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <!-- myscript-common-element is import to be used later -->
     <script type="module" src="../../myscript-common-element.js"></script>
 </head>
 
 <body>
 <div>
-<!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
-<myscript-common-element scheme="https"
-                         host="webdemoapi.myscript.com"
-                         applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
-                         hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
-                         touch-action="none"
-                         disableconvertcontrol
-                         disableclearcontrol>
-</myscript-common-element>
-<textarea id="pointerEventsObject">{ "events": [{
+    <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
+    <myscript-common-element scheme="https"
+                             host="webdemoapi.myscript.com"
+                             applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
+                             hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
+                             touch-action="none"
+                             disableconvertcontrol
+                             disableclearcontrol>
+    </myscript-common-element>
+    <textarea id="pointerEventsObject">{ "events": [{
     "pointerType": "PEN",
     "pointerId": 1,
     "x": [128, 125, 122, 119, 118, 117, 116, 117, 119, 123, 127, 135, 139, 141, 144, 144, 143, 142, 141, 142],
@@ -61,18 +61,17 @@
     "t": [1516190046870, 1516190046930, 1516190046947, 1516190046963, 1516190046980],
     "p": [0.5, 0.7763932022500211, 0.7681880209236327, 0.6676543814462531, 0.785875329883628]
   }]}</textarea>
-<button class="classic-btn" id="pointerEvents">Process</button>
+    <button class="classic-btn" id="pointerEvents">Process</button>
 </div>
-<script type="module">
-import '../../myscript-common-element.js';
-const component = document.querySelector('myscript-common-element');
-const pointerEventsObjectElement = document.getElementById('pointerEventsObject');
+<script>
+    const component = document.querySelector('myscript-common-element');
+    const pointerEventsObjectElement = document.getElementById('pointerEventsObject');
 
-document.getElementById('pointerEvents').addEventListener('click', function () {
-    const pointerEventsObject = JSON.parse(pointerEventsObjectElement.value);
-    console.log('Pointer events being processed', pointerEventsObject);
-    component.pointerEvents(pointerEventsObject);
-});
+    document.getElementById('pointerEvents').addEventListener('click', function () {
+        const pointerEventsObject = JSON.parse(pointerEventsObjectElement.value);
+        console.log('Pointer events being processed', pointerEventsObject);
+        component.pointerEvents(pointerEventsObject);
+    });
 </script>
 </body>
 
