--- a/src/demo-app/examples/non-version-specific/get_languages.html
+++ b/src/demo-app/examples/non-version-specific/get_languages.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="../examples.css">
 
         <script src="../../../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-        <script type="module" src="../../myscript-languages-element.js"></script>
+        <script type="module" src="../../../../myscript-languages-element.js"></script>
     </head>
 
     <body>
