--- a/src/demo-app/examples/v4/iink_rest_text.html
+++ b/src/demo-app/examples/v4/iink_rest_text.html
@@ -36,7 +36,8 @@
                          host="webdemoapi.myscript.com"
                          applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
                          hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
-                         touch-action="none">
+                         touch-action="none"
+                         disableconvertcontrol>
 </myscript-common-element>
 <script>
     const paperToast = document.querySelector('paper-toast');
