--- a/src/demo-app/examples/non-version-specific/handle_exports.html
+++ b/src/demo-app/examples/non-version-specific/handle_exports.html
@@ -14,12 +14,10 @@
     <link rel="stylesheet" href="../examples.css">
 
     <script src="../../../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script type="module" src="../../../../node_modules/@polymer/paper-toast/paper-toast.js"></script>
     <script type="module" src="../../../../myscript-common-element.js"></script>
 </head>
 
 <body>
-<paper-toast class="fit-top"></paper-toast>
 <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
 <myscript-common-element scheme="https"
                          host="webdemoapi.myscript.com"
@@ -29,11 +27,11 @@
                          disableconvertcontrol
                          disableclearcontrol>
 </myscript-common-element>
+<div class="toast"></div>
 <script>
-    const paperToast = document.querySelector('paper-toast');
+    const toast = document.querySelector('.toast');
     document.querySelector('myscript-common-element').addEventListener('exported', (event) => {
-        paperToast.text = `Recognition object contains : ${JSON.stringify(event.detail)}`;
-        paperToast.fitIn = paperToast.show();
+        toast.textContent = `Recognition object contains : ${JSON.stringify(event.detail)}`;
     });
 </script>
 </body>
