--- a/src/demo-app/examples/index.html
+++ b/src/demo-app/examples/index.html
@@ -41,15 +41,6 @@
         <h1>Examples</h1>
         <div class="grid-wrapper">
             <div class="grid-column-one">
-                <h2>Non version specific features</h2>
-                <div class="notice notice-info">
-                    <svg class="icn icn-info">
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-info"></use>
-                    </svg>
-                    <div class="notice-txt">
-                        Demonstration of features not depending of API version configured.
-                    </div>
-                </div>
                 <p><strong>Get started</strong></p>
                 <div class="center">
                     <a href="non-version-specific/get_started.html" class="btn">
@@ -120,35 +111,7 @@
                         </svg>
                         Get source code</a>
                 </div>
-                <p><strong>Settings the attributes programmatically</strong></p>
-                <div class="center">
-                    <a href="non-version-specific/programmatic_init.html" class="btn">
-                        <svg class="icn">
-                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
-                        </svg>
-                        View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/programmatic_init.html"
-                       target="_blank" class="btn">
-                        <svg class="icn">
-                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
-                        </svg>
-                        Get source code</a>
-                </div>
-                <p><strong>Select input populate with the list of supported languages</strong></p>
-                <div class="center">
-                    <a href="non-version-specific/get_languages.html" class="btn">
-                        <svg class="icn">
-                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
-                        </svg>
-                        View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/get_languages.html"
-                       target="_blank" class="btn">
-                        <svg class="icn">
-                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
-                        </svg>
-                        Get source code</a>
-                </div>
-                <p><strong>Select input populate with the list of supported languages configured in Javascript</strong>
+                <p><strong>Select input with the list of supported languages configured in Javascript</strong>
                 </p>
                 <div class="center">
                     <a href="non-version-specific/get_languages_programmatic.html" class="btn">
@@ -165,7 +128,6 @@
                 </div>
             </div>
             <div class="grid-column-two">
-                <h2>V4 - iink SDK web</h2>
                 <p><strong>REST text</strong></p>
                 <div class="center">
                     <a href="v4/iink_rest_text.html" class="btn">
@@ -208,22 +170,47 @@
                         </svg>
                         Get source code</a>
                 </div>
-                <div style="margin-top: 76px;">
-                    <h2>Development</h2>
-                    <p><strong>Activate debug mode</strong></p>
-                    <div class="center">
-                        <a href="dev/debug.html" class="btn">
-                            <svg class="icn">
-                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
-                            </svg>
-                            View example</a>
-                        <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/dev/debug.html"
-                           target="_blank" class="btn">
-                            <svg class="icn">
-                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
-                            </svg>
-                            Get source code</a>
-                    </div>
+                <p><strong>Settings the attributes programmatically</strong></p>
+                <div class="center">
+                    <a href="non-version-specific/programmatic_init.html" class="btn">
+                        <svg class="icn">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
+                        </svg>
+                        View example</a>
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/programmatic_init.html"
+                       target="_blank" class="btn">
+                        <svg class="icn">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
+                        </svg>
+                        Get source code</a>
+                </div>
+                <p><strong>Select input with the list of supported languages</strong></p>
+                <div class="center">
+                    <a href="non-version-specific/get_languages.html" class="btn">
+                        <svg class="icn">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
+                        </svg>
+                        View example</a>
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/get_languages.html"
+                       target="_blank" class="btn">
+                        <svg class="icn">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
+                        </svg>
+                        Get source code</a>
+                </div>
+                <p><strong>Activate debug mode</strong></p>
+                <div class="center">
+                    <a href="dev/debug.html" class="btn">
+                        <svg class="icn">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
+                        </svg>
+                        View example</a>
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/dev/debug.html"
+                       target="_blank" class="btn">
+                        <svg class="icn">
+                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
+                        </svg>
+                        Get source code</a>
                 </div>
             </div>
         </div>
