--- a/src/demo-app/examples/non-version-specific/handle_errors.html
+++ b/src/demo-app/examples/non-version-specific/handle_errors.html
@@ -25,7 +25,9 @@
 <script>
     const toast = document.querySelector('.toast');
     document.querySelector('myscript-common-element').addEventListener('error', (event) => {
-        toast.textContent = `Error : ${JSON.stringify(event)}`;
+        if(event.detail && event.detail.type !== 'close') {
+            toast.textContent = `Error : ${JSON.stringify(event.detail)}`;
+        }
     });
 </script>
 </body>
