fix(examples): wrong link to github sources

--- a/src/demo-app/examples/index.html
+++ b/src/demo-app/examples/index.html
@@ -48,8 +48,8 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/get_started.html"
-                       class="btn">
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/non-version-specific/get_started.html"
+                       target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
                         </svg>
@@ -62,7 +62,7 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/handle_errors.html"
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/non-version-specific/handle_errors.html"
                        target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
@@ -76,7 +76,7 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/handle_exports.html"
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/non-version-specific/handle_exports.html"
                        target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
@@ -90,7 +90,7 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/customize_style.html"
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/non-version-specific/customize_style.html"
                        target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
@@ -104,7 +104,7 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/custom_controls.html"
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/non-version-specific/custom_controls.html"
                        target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
@@ -119,7 +119,7 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/get_languages_programmatic.html"
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/non-version-specific/get_languages_programmatic.html"
                        target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
@@ -135,7 +135,7 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/v4/iink_rest_text.html"
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/v4/iink_rest_text.html"
                        target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
@@ -149,7 +149,7 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/v4/import_content.html"
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/v4/import_content.html"
                        target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
@@ -163,7 +163,7 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/v4/pointer_events.html"
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/v4/pointer_events.html"
                        target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
@@ -177,7 +177,7 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/programmatic_init.html"
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/non-version-specific/programmatic_init.html"
                        target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
@@ -191,7 +191,7 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/non-version-specific/get_languages.html"
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/non-version-specific/get_languages.html"
                        target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
@@ -205,7 +205,7 @@
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-play"></use>
                         </svg>
                         View example</a>
-                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/examples/dev/debug.html"
+                    <a href="https://github.com/MyScript/myscript-common-element/blob/master/src/demo-app/examples/dev/debug.html"
                        target="_blank" class="btn">
                         <svg class="icn">
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icn-github"></use>
